# LangBridge

./: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1778580073241-f040cf26fc137.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitkeep
src-tauri/src/: engine.rs  lib.rs  main.rs  preview.rs  preview_gpu.rs  preview_render.rs
src/components/: CenterTabs.tsx  ChatPanel.tsx  CommandPalette.tsx  CutListPane.tsx  EngineToolbar.tsx  FirstRunOverlay.tsx  FolderPane.tsx  MediaPoolPane.tsx  PreviewPane.tsx  TimelinePane.tsx  TopBar.tsx  TranscriptEditorPane.tsx  TranscriptRemovalDiff.tsx  VideoPlayer.tsx
src/lib/: aiClient.ts  captionPresets.ts  captionsSrt.test.ts  captionsSrt.ts  chat.ts  cn.ts  engineClient.test.ts  engineClient.ts  exportRecut.test.ts  exportRecut.ts  fcpxml.test.ts  fcpxml.ts  folderProject.ts  modKey.ts  onboardingStorage.ts  ops.ts  perVideoProject.ts  planResidency.test.ts  planResidency.ts  planSse.test.ts  planSse.ts  previewProbe.ts  previewRender.test.ts  previewRender.ts  previewSnippet.test.ts  previewSnippet.ts  projectFile.ts  siftAiHealth.ts  simpleMediaImport.ts  stubPlanner.test.ts  stubPlanner.ts  time.ts  timeRangeParse.ts  timelineHitTest.ts  transcriptCache.ts  transcriptCleanup.test.ts  transcriptCleanup.ts  transcriptDisplay.test.ts  transcriptDisplay.ts  (+9 more)
(+1 files in other folders)
